# lib_log

./: CMakeLists.txt  README.md
include/: lib_log.h
src/: lib_log.c
